<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/aboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:text="@string/about" />

    <TextView
        android:id="@+id/applicationAboutTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:padding="5dip"
        android:text="@string/application_about1" />

    <TextView
        android:id="@+id/applicationAboutTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:padding="5dip"
        android:text="@string/application_about2" />

    <TextView
        android:id="@+id/developedByTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:padding="5dip"
        android:text="@string/developed_by" />

    <TextView
        android:id="@+id/developer1NameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:padding="5dip"
        android:text="@string/developer1_name" />

    <TextView
        android:id="@+id/developer1EMailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:padding="5dip"
        android:text="@string/developer1_email" />

    <TextView
        android:id="@+id/developer1AboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:padding="5dip"
        android:text="@string/developer1_about" />
    
</LinearLayout>